--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutor Portal | Peer-2-Peer Pro</title>
     <link rel="stylesheet" href="tutor.css">
-    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/graduation-cap.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src='https://meet.jit.si/external_api.js'></script>
 </head>
@@ -15,7 +15,7 @@
 
     <nav class="glass-nav">
         <div class="logo-container">
-            <img src="https://img.icons8.com/color/48/000000/graduation-cap.png" alt="Logo" style="width:35px;">
+            <img src="favicon.ico" alt="Logo">
             <span class="brand-name">PEER-2-PEER <span class="green-text">PRO</span></span>
         </div>
 
