fix tutor cards

--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -37,22 +37,22 @@
         </header>
 
         <div class="dashboard-grid">
-            <div class="dash-card featured" onclick="window.location.href='create-live.html'">
+            <div class="dash-card featured" onclick="window.location.href='create-class.html'">
                 <div class="card-icon"><i class="fas fa-video"></i></div>
                 <h3>Live Organiser</h3>
                 <p>Schedule sessions on the Live Worker.</p>
             </div>
 
-            <div class="dash-card" onclick="alert('Resources coming soon')">
+            <div class="dash-card" onclick="window.location.href='resources.html'">
                 <div class="card-icon"><i class="fas fa-file-upload"></i></div>
                 <h3>Resources</h3>
                 <p>Upload and share materials.</p>
             </div>
 
-            <div class="dash-card" onclick="alert('Analytics coming soon')">
-                <div class="card-icon"><i class="fas fa-chart-line"></i></div>
-                <h3>Analytics</h3>
-                <p>View student engagement.</p>
+            <div class="dash-card" onclick="window.location.href='whiteboard.html'">
+                <div class="card-icon"><i class="fas fa-blackboard"></i></div>
+                <h3>Whiteboard</h3>
+                <p>Interactive whiteboard for live sessions.</p>
             </div>
 
             <div class="dash-card" onclick="alert('Forum coming soon')">
