fix whiteboard logo

--- a/whiteboard.html
+++ b/whiteboard.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/whiteboard.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- Drawing Library -->
     <script src="https://cdn.jsdelivr.net/npm/fabric@5.3.0/dist/fabric.min.js"></script>
@@ -63,7 +63,7 @@
     <!-- Navigation -->
     <nav class="whiteboard-nav">
         <a href="tutor-portal.html" class="whiteboard-logo">
-            <img src="https://img.icons8.com/color/96/000000/whiteboard.png" alt="Whiteboard Logo">
+            <img src="favicon.ico" alt="Logo">
             <div>
                 <div class="whiteboard-title">Interactive Whiteboard</div>
                 <div style="font-size: 0.9rem; color: var(--text-muted); font-weight: 500;">
