fix forum replies and upload to database table

--- a/create-class.html
+++ b/create-class.html
@@ -28,15 +28,24 @@
                 <div class="form-header">
                     <i class="fas fa-video pulse-icon"></i>
                     <h2>Launch <span class="green-text">Live Class</span></h2>
-                    <p>Set up your classroom. Details will be saved to your D1 database.</p>
+                    <p>Enter your details to schedule a new session.</p>
                 </div>
 
                 <div class="p2p-form">
                     <div class="input-group">
+                        <label for="tutorNameInput"><i class="fas fa-user"></i> Your Name</label>
+                        <input type="text" id="tutorNameInput" placeholder="e.g. Dr. Sarah Johnson">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="tutorEmailInput"><i class="fas fa-envelope"></i> Your Email</label>
+                        <input type="email" id="tutorEmailInput" placeholder="tutor@example.com">
+                    </div>
+
+                    <div class="input-group">
                         <label for="classTopic"><i class="fas fa-book"></i> Lesson Topic</label>
                         <input type="text" id="classTopic" placeholder="e.g. Calculus Basics">
                     </div>
-
                     <div class="input-group">
                         <label for="classGrade"><i class="fas fa-graduation-cap"></i> Select Grade</label>
                         <select id="classGrade">
