--- a/live-session.html
+++ b/live-session.html
@@ -52,15 +52,14 @@
             const roomName = params.get('room');
 
             if (!roomName) {
-                alert("Room not found.");
+                alert("No room specified.");
                 window.location.href = "create-class.html";
                 return;
             }
 
             const domain = "meet.jit.si";
-
             const options = {
-                roomName,
+                roomName: roomName, // Ensure the variable is used
                 parentNode: document.getElementById("meet"),
                 width: "100%",
                 height: "100%",
@@ -69,25 +68,23 @@
                 },
                 configOverwrite: {
                     startWithAudioMuted: false,
-                    startWithVideoMuted: false,
-                    prejoinPageEnabled: false
-                },
-                interfaceConfigOverwrite: {
-                    SHOW_JITSI_WATERMARK: false,
-                    SHOW_WATERMARK_FOR_GUESTS: false
+                    prejoinPageEnabled: false, // Skips the extra "Join" screen
+                    disableDeepLinking: true   // Prevents it from forcing the mobile app
                 }
             };
 
-            const api = new JitsiMeetExternalAPI(domain, options);
+            try {
+                const api = new JitsiMeetExternalAPI(domain, options);
 
-            api.addEventListener("videoConferenceJoined", () => {
-                document.getElementById("loading").style.display = "none";
-            });
-
-            api.addEventListener("readyToClose", () => {
-                window.location.href = "tutor-portal.html";
-            });
-        };
+                // Hide loading screen safely
+                api.addEventListener("videoConferenceJoined", () => {
+                    const loader = document.getElementById("loading");
+                    if (loader) loader.style.display = "none";
+                });
+            } catch (error) {
+                console.error("Jitsi failed to load:", error);
+            }
+        }
     </script>
 
 </body>
