--- a/live-session.html
+++ b/live-session.html
@@ -47,7 +47,6 @@
     </div>
 
     <div id="meet"></div>
-
     <script>
         window.onload = () => {
             const params = new URLSearchParams(window.location.search);
@@ -61,10 +60,10 @@
 
             document.getElementById('room-display').innerText = roomName;
 
-            // CONFIGURATION: This links your site to Jitsi's server
+            // Jitsi Configuration
             const domain = "meet.jit.si";
             const options = {
-                roomName: roomName, // This is the 'P2P-xxx' from your URL
+                roomName: roomName,
                 width: "100%",
                 height: "100%",
                 parentNode: document.querySelector('#meet'),
@@ -72,22 +71,72 @@
                     displayName: sessionStorage.getItem('p2p_name') || 'Tutor'
                 },
                 configOverwrite: {
-                    disableDeepLinking: true, // Forces browser mode (no app needed)
-                    prejoinPageEnabled: false // Skips the 'Join' button for speed
+                    disableDeepLinking: true,
+                    prejoinPageEnabled: false,
+                    startWithAudioMuted: true,
+                    startWithVideoMuted: false,
+                    enableWelcomePage: false
+                },
+                interfaceConfigOverwrite: {
+                    TOOLBAR_BUTTONS: [
+                        'microphone', 'camera', 'closedcaptions', 'desktop', 'fullscreen',
+                        'fodeviceselection', 'hangup', 'profile', 'chat', 'recording',
+                        'livestreaming', 'settings', 'raisehand', 'videoquality', 'filmstrip',
+                        'invite', 'feedback', 'stats', 'shortcuts', 'tileview', 'videobackgroundblur',
+                        'download', 'help', 'mute-everyone', 'security'
+                    ],
+                    SHOW_JITSI_WATERMARK: false,
+                    SHOW_WATERMARK_FOR_GUESTS: false,
+                    DEFAULT_BACKGROUND: '#0a192f',
+                    BRAND_WATERMARK_LINK: '',
+                    MOBILE_APP_PROMO: false
                 }
             };
 
-            // Start the Jitsi Interface
+            // Start Jitsi with better error handling
             try {
                 const api = new JitsiMeetExternalAPI(domain, options);
 
-                // Hide loader when the video actually starts
+                // Hide loader when conference starts
                 api.addEventListener('videoConferenceJoined', () => {
+                    console.log("Conference joined successfully");
                     document.getElementById('loading').style.display = 'none';
                 });
+
+                // Handle connection errors
+                api.addEventListener('readyToClose', () => {
+                    console.log("Conference ended");
+                });
+
+                // Handle errors
+                api.addEventListener('errorOccurred', (error) => {
+                    console.error("Jitsi Error:", error);
+                    document.querySelector('#loading h2').innerText = "Connection Error. Please Refresh.";
+                });
+
+                // Fallback timeout
+                setTimeout(() => {
+                    if (document.getElementById('loading').style.display !== 'none') {
+                        console.warn("Loading timeout - trying to proceed");
+                        document.getElementById('loading').style.display = 'none';
+                    }
+                }, 10000);
+
             } catch (err) {
                 console.error("Jitsi Load Error:", err);
-                document.querySelector('#loading h2').innerText = "Connection Failed. Please Refresh.";
+                document.getElementById('loading').innerHTML = `
+                <h2>Connection Failed</h2>
+                <p>Error: ${err.message}</p>
+                <button onclick="window.location.reload()" style="
+                    margin-top: 20px;
+                    padding: 10px 20px;
+                    background: #32cd32;
+                    color: white;
+                    border: none;
+                    border-radius: 5px;
+                    cursor: pointer;
+                ">Try Again</button>
+            `;
             }
         };
     </script>
