fix login style and page

--- a/create-class.html
+++ b/create-class.html
@@ -48,6 +48,14 @@
                         <input type="text" id="classTopic" placeholder="e.g. Calculus Basics">
                     </div>
                     <div class="input-group">
+                        <label><i class="fas fa-calendar"></i> Date</label>
+                        <input type="date" id="classDate">
+                    </div>
+                    <div class="input-group">
+                        <label><i class="fas fa-clock"></i> Start Time</label>
+                        <input type="time" id="classTime">
+                    </div>
+                    <div class="input-group">
                         <label for="classGrade"><i class="fas fa-graduation-cap"></i> Select Grade</label>
                         <select id="classGrade">
                             <option value="Grade 1">Grade 1</option>
