--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -55,10 +55,15 @@
                 <p>Interactive whiteboard for live sessions.</p>
             </div>
 
-            <div class="dash-card" onclick="alert('Forum coming soon')">
+            <div class="dash-card" onclick="window.location.href='forum.html'">
                 <div class="card-icon"><i class="fas fa-comments"></i></div>
                 <h3>P2P Forum</h3>
                 <p>Community discussion board.</p>
+            </div>
+            <div class="dash-card" onclick="window.location.href='create-file.html'">
+                <div class="card-icon"><i class="fas fa-file-alt"></i></div>
+                <h3>Create Your Document</h3>
+                <p>Create your own personalized documents for your lessons.</p>
             </div>
         </div>
     </main>
