fix redirect on student portal

--- a/student-portal.html
+++ b/student-portal.html
@@ -82,7 +82,7 @@
                     <p class="section-description">Se your next live class.</p>
                 </div>
                 <div class="features-grid">
-                    <div class="feature-card" onclick="openLiveClasses()">
+                    <div class="feature-card" onclick="window.location.href='student-view.html'">
                         <div class="feature-icon-wrapper">
                             <div class="feature-icon pulse-animation">
                                 <i class="fas fa-video"></i>
@@ -159,7 +159,7 @@
                     <p class="section-description">Track your learning journey</p>
                 </div>
                 <div class="features-grid">
-                    <div class="feature-card" onclick="openProgressTracker()">
+                    <div class="feature-card" onclick="window.location.href='progress-tracker.html'">
                         <div class="feature-icon-wrapper">
                             <div class="feature-icon">
                                 <i class="fas fa-chart-line"></i>
